--- a/iPhone_JSON-Info.plist
+++ b/iPhone_JSON-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>appengine_ruby-icon.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.freshblocks.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -26,18 +26,9 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow_Phone</string>
-	<key>NSMainNibFile~ipad</key>
-	<string>MainWindow_Pad</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
